Revise math functions in Utils